obj/parser.output
Terminals unused in grammar

    UNARY_MINUS
    UNARY_PLUS


State 3 conflicts: 6 reduce/reduce
State 98 conflicts: 1 shift/reduce
State 136 conflicts: 6 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration
    6                     | statement
    7                     | preprocessor_directive

    8 preprocessor_directive: PREPROCESSOR

    9 $@1: ε

   10 function_definition: declaration_specifiers declarator $@1 compound_statement

   11 declaration: declaration_specifiers SEMICOLON
   12            | declaration_specifiers init_declarator_list SEMICOLON

   13 declaration_specifiers: specifier
   14                       | declaration_specifiers specifier

   15 specifier: storage_class_specifier
   16          | type_specifier
   17          | type_qualifier

   18 storage_class_specifier: TYPEDEF
   19                        | EXTERN
   20                        | STATIC
   21                        | AUTO
   22                        | REGISTER

   23 type_specifier: VOID
   24               | CHAR_TOKEN
   25               | SHORT
   26               | INT
   27               | LONG
   28               | FLOAT_TOKEN
   29               | DOUBLE
   30               | SIGNED
   31               | UNSIGNED
   32               | BOOL
   33               | struct_or_union_specifier
   34               | enum_specifier
   35               | TYPE_NAME

   36 type_qualifier: CONST
   37               | VOLATILE

   38 struct_or_union_specifier: STRUCT IDENTIFIER
   39                          | STRUCT LBRACE struct_declaration_list RBRACE
   40                          | STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
   41                          | UNION IDENTIFIER
   42                          | UNION LBRACE struct_declaration_list RBRACE
   43                          | UNION IDENTIFIER LBRACE struct_declaration_list RBRACE

   44 struct_declaration_list: struct_declaration
   45                        | struct_declaration_list struct_declaration

   46 struct_declaration: declaration_specifiers struct_declarator_list SEMICOLON

   47 struct_declarator_list: struct_declarator
   48                       | struct_declarator_list COMMA struct_declarator

   49 struct_declarator: declarator
   50                  | COLON constant_expression
   51                  | declarator COLON constant_expression

   52 enum_specifier: ENUM LBRACE enumerator_list RBRACE
   53               | ENUM IDENTIFIER
   54               | ENUM IDENTIFIER LBRACE enumerator_list RBRACE

   55 enumerator_list: enumerator
   56                | enumerator_list COMMA enumerator

   57 enumerator: IDENTIFIER
   58           | IDENTIFIER ASSIGN constant_expression

   59 init_declarator_list: init_declarator
   60                     | init_declarator_list COMMA init_declarator

   61 init_declarator: declarator
   62                | declarator ASSIGN initializer

   63 initializer: assignment_expression
   64            | LBRACE initializer_list RBRACE
   65            | LBRACE initializer_list COMMA RBRACE

   66 initializer_list: initializer
   67                 | initializer_list COMMA initializer

   68 declarator: direct_declarator
   69           | MULTIPLY declarator
   70           | MULTIPLY type_qualifier_list declarator
   71           | BITWISE_AND declarator

   72 direct_declarator: IDENTIFIER
   73                  | TYPE_NAME
   74                  | LPAREN declarator RPAREN
   75                  | direct_declarator LBRACKET RBRACKET
   76                  | direct_declarator LBRACKET constant_expression RBRACKET
   77                  | direct_declarator LPAREN RPAREN

   78 $@2: ε

   79 direct_declarator: direct_declarator LPAREN $@2 parameter_type_list RPAREN

   80 type_qualifier_list: type_qualifier
   81                    | type_qualifier_list type_qualifier

   82 parameter_type_list: parameter_list

   83 parameter_list: parameter_declaration
   84               | parameter_list COMMA parameter_declaration

   85 parameter_declaration: declaration_specifiers declarator
   86                      | declaration_specifiers abstract_declarator
   87                      | declaration_specifiers

   88 abstract_declarator: MULTIPLY
   89                    | BITWISE_AND
   90                    | direct_abstract_declarator
   91                    | MULTIPLY type_qualifier_list
   92                    | MULTIPLY direct_abstract_declarator
   93                    | MULTIPLY type_qualifier_list direct_abstract_declarator
   94                    | BITWISE_AND direct_abstract_declarator

   95 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
   96                           | LBRACKET RBRACKET
   97                           | LBRACKET constant_expression RBRACKET
   98                           | direct_abstract_declarator LBRACKET RBRACKET
   99                           | direct_abstract_declarator LBRACKET constant_expression RBRACKET
  100                           | LPAREN RPAREN
  101                           | LPAREN parameter_type_list RPAREN
  102                           | direct_abstract_declarator LPAREN RPAREN
  103                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN

  104 statement: labeled_statement
  105          | compound_statement
  106          | expression_statement
  107          | selection_statement
  108          | iteration_statement
  109          | jump_statement

  110 labeled_statement: IDENTIFIER COLON statement
  111                  | CASE constant_expression COLON statement
  112                  | DEFAULT COLON statement

  113 $@3: ε

  114 compound_statement: LBRACE $@3 RBRACE

  115 $@4: ε

  116 compound_statement: LBRACE $@4 block_item_list RBRACE

  117 block_item_list: block_item
  118                | block_item_list block_item

  119 block_item: declaration
  120           | statement
  121           | function_definition

  122 expression_statement: SEMICOLON
  123                     | expression SEMICOLON
  124                     | error SEMICOLON

  125 if_header: IF LPAREN expression RPAREN

  126 marker_while_start: ε

  127 for_label_marker: ε

  128 for_increment_expression: ε
  129                         | expression

  130 selection_statement: if_header statement

  131 $@5: ε

  132 selection_statement: if_header statement ELSE $@5 statement

  133 $@6: ε

  134 selection_statement: SWITCH LPAREN expression RPAREN $@6 statement

  135 do_header: DO

  136 do_trailer: WHILE LPAREN expression RPAREN SEMICOLON
  137           | UNTIL LPAREN expression RPAREN SEMICOLON
  138           | WHILE LPAREN error RPAREN SEMICOLON
  139           | UNTIL LPAREN error RPAREN SEMICOLON

  140 $@7: ε

  141 iteration_statement: WHILE LPAREN marker_while_start expression RPAREN $@7 statement
  142                    | do_header statement do_trailer

  143 $@8: ε

  144 iteration_statement: FOR LPAREN expression_statement for_label_marker expression_statement $@8 for_increment_expression RPAREN statement

  145 $@9: ε

  146 $@10: ε

  147 iteration_statement: FOR LPAREN $@9 declaration for_label_marker expression_statement $@10 for_increment_expression RPAREN statement

  148 jump_statement: GOTO IDENTIFIER SEMICOLON
  149               | CONTINUE SEMICOLON
  150               | BREAK SEMICOLON
  151               | RETURN SEMICOLON
  152               | RETURN expression SEMICOLON

  153 expression: assignment_expression
  154           | expression COMMA assignment_expression

  155 assignment_expression: conditional_expression
  156                      | unary_expression ASSIGN assignment_expression
  157                      | unary_expression PLUS_ASSIGN assignment_expression
  158                      | unary_expression MINUS_ASSIGN assignment_expression
  159                      | unary_expression MUL_ASSIGN assignment_expression
  160                      | unary_expression DIV_ASSIGN assignment_expression
  161                      | unary_expression MOD_ASSIGN assignment_expression
  162                      | unary_expression AND_ASSIGN assignment_expression
  163                      | unary_expression OR_ASSIGN assignment_expression
  164                      | unary_expression XOR_ASSIGN assignment_expression
  165                      | unary_expression LSHIFT_ASSIGN assignment_expression
  166                      | unary_expression RSHIFT_ASSIGN assignment_expression

  167 conditional_expression: logical_or_expression
  168                       | logical_or_expression QUESTION expression COLON conditional_expression

  169 constant_expression: conditional_expression

  170 logical_or_expression: logical_and_expression
  171                      | logical_or_expression LOGICAL_OR logical_and_expression

  172 logical_and_expression: inclusive_or_expression
  173                       | logical_and_expression LOGICAL_AND inclusive_or_expression

  174 inclusive_or_expression: exclusive_or_expression
  175                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

  176 exclusive_or_expression: and_expression
  177                        | exclusive_or_expression BITWISE_XOR and_expression

  178 and_expression: equality_expression
  179               | and_expression BITWISE_AND equality_expression

  180 equality_expression: relational_expression
  181                    | equality_expression EQ relational_expression
  182                    | equality_expression NE relational_expression

  183 relational_expression: shift_expression
  184                      | relational_expression LT shift_expression
  185                      | relational_expression GT shift_expression
  186                      | relational_expression LE shift_expression
  187                      | relational_expression GE shift_expression

  188 shift_expression: additive_expression
  189                 | shift_expression LSHIFT additive_expression
  190                 | shift_expression RSHIFT additive_expression

  191 additive_expression: multiplicative_expression
  192                    | additive_expression PLUS multiplicative_expression
  193                    | additive_expression MINUS multiplicative_expression

  194 multiplicative_expression: cast_expression
  195                          | multiplicative_expression MULTIPLY cast_expression
  196                          | multiplicative_expression DIVIDE cast_expression
  197                          | multiplicative_expression MODULO cast_expression

  198 cast_expression: unary_expression
  199                | LPAREN type_name RPAREN cast_expression

  200 type_name: declaration_specifiers
  201          | declaration_specifiers abstract_declarator

  202 unary_expression: postfix_expression
  203                 | INCREMENT unary_expression
  204                 | DECREMENT unary_expression
  205                 | BITWISE_AND cast_expression
  206                 | MULTIPLY cast_expression
  207                 | PLUS cast_expression
  208                 | MINUS cast_expression
  209                 | BITWISE_NOT cast_expression
  210                 | LOGICAL_NOT cast_expression
  211                 | SIZEOF unary_expression
  212                 | SIZEOF LPAREN type_name RPAREN

  213 postfix_expression: primary_expression
  214                   | postfix_expression LBRACKET expression RBRACKET
  215                   | postfix_expression LPAREN RPAREN
  216                   | postfix_expression LPAREN argument_expression_list RPAREN
  217                   | postfix_expression DOT IDENTIFIER
  218                   | postfix_expression ARROW IDENTIFIER
  219                   | postfix_expression INCREMENT
  220                   | postfix_expression DECREMENT

  221 primary_expression: IDENTIFIER
  222                   | TYPE_NAME
  223                   | INTEGER_CONSTANT
  224                   | HEX_CONSTANT
  225                   | OCTAL_CONSTANT
  226                   | BINARY_CONSTANT
  227                   | FLOAT_CONSTANT
  228                   | CHAR_CONSTANT
  229                   | STRING_LITERAL
  230                   | primary_expression STRING_LITERAL
  231                   | LPAREN expression RPAREN

  232 argument_expression_list: assignment_expression
  233                         | argument_expression_list COMMA assignment_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 124 138 139
    IDENTIFIER <node> (258) 38 40 41 43 53 54 57 58 72 110 148 217 218 221
    TYPE_NAME <node> (259) 35 73 222
    INTEGER_CONSTANT <node> (260) 223
    HEX_CONSTANT <node> (261) 224
    OCTAL_CONSTANT <node> (262) 225
    BINARY_CONSTANT <node> (263) 226
    FLOAT_CONSTANT <node> (264) 227
    STRING_LITERAL <node> (265) 229 230
    CHAR_CONSTANT <node> (266) 228
    PREPROCESSOR <node> (267) 8
    IF <node> (268) 125
    ELSE <node> (269) 132
    WHILE <node> (270) 136 138 141
    FOR <node> (271) 144 147
    DO <node> (272) 135
    SWITCH <node> (273) 134
    CASE <node> (274) 111
    DEFAULT <node> (275) 112
    BREAK <node> (276) 150
    CONTINUE <node> (277) 149
    RETURN <node> (278) 151 152
    INT <node> (279) 26
    CHAR_TOKEN <node> (280) 24
    FLOAT_TOKEN <node> (281) 28
    DOUBLE <node> (282) 29
    LONG <node> (283) 27
    SHORT <node> (284) 25
    UNSIGNED <node> (285) 31
    SIGNED <node> (286) 30
    VOID <node> (287) 23
    BOOL <node> (288) 32
    STRUCT <node> (289) 38 39 40
    ENUM <node> (290) 52 53 54
    UNION <node> (291) 41 42 43
    TYPEDEF <node> (292) 18
    STATIC <node> (293) 20
    EXTERN <node> (294) 19
    AUTO <node> (295) 21
    REGISTER <node> (296) 22
    CONST <node> (297) 36
    VOLATILE <node> (298) 37
    GOTO <node> (299) 148
    UNTIL <node> (300) 137 139
    SIZEOF <node> (301) 211 212
    ASSIGN <node> (302) 58 62 156
    PLUS_ASSIGN <node> (303) 157
    MINUS_ASSIGN <node> (304) 158
    MUL_ASSIGN <node> (305) 159
    DIV_ASSIGN <node> (306) 160
    MOD_ASSIGN <node> (307) 161
    AND_ASSIGN <node> (308) 162
    OR_ASSIGN <node> (309) 163
    XOR_ASSIGN <node> (310) 164
    LSHIFT_ASSIGN <node> (311) 165
    RSHIFT_ASSIGN <node> (312) 166
    EQ <node> (313) 181
    NE <node> (314) 182
    LT <node> (315) 184
    GT <node> (316) 185
    LE <node> (317) 186
    GE <node> (318) 187
    LOGICAL_AND <node> (319) 173
    LOGICAL_OR <node> (320) 171
    LSHIFT <node> (321) 189
    RSHIFT <node> (322) 190
    INCREMENT <node> (323) 203 219
    DECREMENT <node> (324) 204 220
    ARROW <node> (325) 218
    PLUS <node> (326) 192 207
    MINUS <node> (327) 193 208
    MULTIPLY <node> (328) 69 70 88 91 92 93 195 206
    DIVIDE <node> (329) 196
    MODULO <node> (330) 197
    BITWISE_AND <node> (331) 71 89 94 179 205
    BITWISE_OR <node> (332) 175
    BITWISE_XOR <node> (333) 177
    BITWISE_NOT <node> (334) 209
    LOGICAL_NOT <node> (335) 210
    QUESTION <node> (336) 168
    LPAREN <node> (337) 74 77 79 95 100 101 102 103 125 134 136 137 138 139 141 144 147 199 212 215 216 231
    RPAREN <node> (338) 74 77 79 95 100 101 102 103 125 134 136 137 138 139 141 144 147 199 212 215 216 231
    LBRACE <node> (339) 39 40 42 43 52 54 64 65 114 116
    RBRACE <node> (340) 39 40 42 43 52 54 64 65 114 116
    LBRACKET <node> (341) 75 76 96 97 98 99 214
    RBRACKET <node> (342) 75 76 96 97 98 99 214
    SEMICOLON <node> (343) 11 12 46 122 123 124 136 137 138 139 148 149 150 151 152
    COMMA <node> (344) 48 56 60 65 67 84 154 233
    DOT <node> (345) 217
    COLON <node> (346) 50 51 110 111 112 168
    UNARY_MINUS (347)
    UNARY_PLUS (348)
    LOWER_THAN_ELSE (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    program <node> (96)
        on left: 1
        on right: 0
    translation_unit <node> (97)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (98)
        on left: 4 5 6 7
        on right: 2 3
    preprocessor_directive <node> (99)
        on left: 8
        on right: 7
    function_definition <node> (100)
        on left: 10
        on right: 4 121
    $@1 (101)
        on left: 9
        on right: 10
    declaration <node> (102)
        on left: 11 12
        on right: 5 119 147
    declaration_specifiers <node> (103)
        on left: 13 14
        on right: 10 11 12 14 46 85 86 87 200 201
    specifier <node> (104)
        on left: 15 16 17
        on right: 13 14
    storage_class_specifier <node> (105)
        on left: 18 19 20 21 22
        on right: 15
    type_specifier <node> (106)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 16
    type_qualifier <node> (107)
        on left: 36 37
        on right: 17 80 81
    struct_or_union_specifier <node> (108)
        on left: 38 39 40 41 42 43
        on right: 33
    struct_declaration_list <node> (109)
        on left: 44 45
        on right: 39 40 42 43 45
    struct_declaration <node> (110)
        on left: 46
        on right: 44 45
    struct_declarator_list <node> (111)
        on left: 47 48
        on right: 46 48
    struct_declarator <node> (112)
        on left: 49 50 51
        on right: 47 48
    enum_specifier <node> (113)
        on left: 52 53 54
        on right: 34
    enumerator_list <node> (114)
        on left: 55 56
        on right: 52 54 56
    enumerator <node> (115)
        on left: 57 58
        on right: 55 56
    init_declarator_list <node> (116)
        on left: 59 60
        on right: 12 60
    init_declarator <node> (117)
        on left: 61 62
        on right: 59 60
    initializer <node> (118)
        on left: 63 64 65
        on right: 62 66 67
    initializer_list <node> (119)
        on left: 66 67
        on right: 64 65 67
    declarator <node> (120)
        on left: 68 69 70 71
        on right: 10 49 51 61 62 69 70 71 74 85
    direct_declarator <node> (121)
        on left: 72 73 74 75 76 77 79
        on right: 68 75 76 77 79
    $@2 (122)
        on left: 78
        on right: 79
    type_qualifier_list <node> (123)
        on left: 80 81
        on right: 70 81 91 93
    parameter_type_list <node> (124)
        on left: 82
        on right: 79 101 103
    parameter_list <node> (125)
        on left: 83 84
        on right: 82 84
    parameter_declaration <node> (126)
        on left: 85 86 87
        on right: 83 84
    abstract_declarator <node> (127)
        on left: 88 89 90 91 92 93 94
        on right: 86 95 201
    direct_abstract_declarator <node> (128)
        on left: 95 96 97 98 99 100 101 102 103
        on right: 90 92 93 94 98 99 102 103
    statement <node> (129)
        on left: 104 105 106 107 108 109
        on right: 6 110 111 112 120 130 132 134 141 142 144 147
    labeled_statement <node> (130)
        on left: 110 111 112
        on right: 104
    compound_statement <node> (131)
        on left: 114 116
        on right: 10 105
    $@3 (132)
        on left: 113
        on right: 114
    $@4 (133)
        on left: 115
        on right: 116
    block_item_list <node> (134)
        on left: 117 118
        on right: 116 118
    block_item <node> (135)
        on left: 119 120 121
        on right: 117 118
    expression_statement <node> (136)
        on left: 122 123 124
        on right: 106 144 147
    if_header <node> (137)
        on left: 125
        on right: 130 132
    marker_while_start <node> (138)
        on left: 126
        on right: 141
    for_label_marker <node> (139)
        on left: 127
        on right: 144 147
    for_increment_expression <node> (140)
        on left: 128 129
        on right: 144 147
    selection_statement <node> (141)
        on left: 130 132 134
        on right: 107
    $@5 (142)
        on left: 131
        on right: 132
    $@6 (143)
        on left: 133
        on right: 134
    do_header <node> (144)
        on left: 135
        on right: 142
    do_trailer <node> (145)
        on left: 136 137 138 139
        on right: 142
    iteration_statement <node> (146)
        on left: 141 142 144 147
        on right: 108
    $@7 (147)
        on left: 140
        on right: 141
    $@8 (148)
        on left: 143
        on right: 144
    $@9 (149)
        on left: 145
        on right: 147
    $@10 (150)
        on left: 146
        on right: 147
    jump_statement <node> (151)
        on left: 148 149 150 151 152
        on right: 109
    expression <node> (152)
        on left: 153 154
        on right: 123 125 129 134 136 137 141 152 154 168 214 231
    assignment_expression <node> (153)
        on left: 155 156 157 158 159 160 161 162 163 164 165 166
        on right: 63 153 154 156 157 158 159 160 161 162 163 164 165 166 232 233
    conditional_expression <node> (154)
        on left: 167 168
        on right: 155 168 169
    constant_expression <node> (155)
        on left: 169
        on right: 50 51 58 76 97 99 111
    logical_or_expression <node> (156)
        on left: 170 171
        on right: 167 168 171
    logical_and_expression <node> (157)
        on left: 172 173
        on right: 170 171 173
    inclusive_or_expression <node> (158)
        on left: 174 175
        on right: 172 173 175
    exclusive_or_expression <node> (159)
        on left: 176 177
        on right: 174 175 177
    and_expression <node> (160)
        on left: 178 179
        on right: 176 177 179
    equality_expression <node> (161)
        on left: 180 181 182
        on right: 178 179 181 182
    relational_expression <node> (162)
        on left: 183 184 185 186 187
        on right: 180 181 182 184 185 186 187
    shift_expression <node> (163)
        on left: 188 189 190
        on right: 183 184 185 186 187 189 190
    additive_expression <node> (164)
        on left: 191 192 193
        on right: 188 189 190 192 193
    multiplicative_expression <node> (165)
        on left: 194 195 196 197
        on right: 191 192 193 195 196 197
    cast_expression <node> (166)
        on left: 198 199
        on right: 194 195 196 197 199 205 206 207 208 209 210
    type_name <node> (167)
        on left: 200 201
        on right: 199 212
    unary_expression <node> (168)
        on left: 202 203 204 205 206 207 208 209 210 211 212
        on right: 156 157 158 159 160 161 162 163 164 165 166 198 203 204 211
    postfix_expression <node> (169)
        on left: 213 214 215 216 217 218 219 220
        on right: 202 214 215 216 217 218 219 220
    primary_expression <node> (170)
        on left: 221 222 223 224 225 226 227 228 229 230 231
        on right: 213 230
    argument_expression_list <node> (171)
        on left: 232 233
        on right: 216 233


State 0

    0 $accept: • program $end

    error             shift, and go to state 1
    IDENTIFIER        shift, and go to state 2
    TYPE_NAME         shift, and go to state 3
    INTEGER_CONSTANT  shift, and go to state 4
    HEX_CONSTANT      shift, and go to state 5
    OCTAL_CONSTANT    shift, and go to state 6
    BINARY_CONSTANT   shift, and go to state 7
    FLOAT_CONSTANT    shift, and go to state 8
    STRING_LITERAL    shift, and go to state 9
    CHAR_CONSTANT     shift, and go to state 10
    PREPROCESSOR      shift, and go to state 11
    IF                shift, and go to state 12
    WHILE             shift, and go to state 13
    FOR               shift, and go to state 14
    DO                shift, and go to state 15
    SWITCH            shift, and go to state 16
    CASE              shift, and go to state 17
    DEFAULT           shift, and go to state 18
    BREAK             shift, and go to state 19
    CONTINUE          shift, and go to state 20
    RETURN            shift, and go to state 21
    INT               shift, and go to state 22
    CHAR_TOKEN        shift, and go to state 23
    FLOAT_TOKEN       shift, and go to state 24
    DOUBLE            shift, and go to state 25
    LONG              shift, and go to state 26
    SHORT             shift, and go to state 27
    UNSIGNED          shift, and go to state 28
    SIGNED            shift, and go to state 29
    VOID              shift, and go to state 30
    BOOL              shift, and go to state 31
    STRUCT            shift, and go to state 32
    ENUM              shift, and go to state 33
    UNION             shift, and go to state 34
    TYPEDEF           shift, and go to state 35
    STATIC            shift, and go to state 36
    EXTERN            shift, and go to state 37
    AUTO              shift, and go to state 38
    REGISTER          shift, and go to state 39
    CONST             shift, and go to state 40
    VOLATILE          shift, and go to state 41
    GOTO              shift, and go to state 42
    SIZEOF            shift, and go to state 43
    INCREMENT         shift, and go to state 44
    DECREMENT         shift, and go to state 45
    PLUS              shift, and go to state 46
    MINUS             shift, and go to state 47
    MULTIPLY          shift, and go to state 48
    BITWISE_AND       shift, and go to state 49
    BITWISE_NOT       shift, and go to state 50
    LOGICAL_NOT       shift, and go to state 51
    LPAREN            shift, and go to state 52
    LBRACE            shift, and go to state 53
    SEMICOLON         shift, and go to state 54

    program                    go to state 55
    translation_unit           go to state 56
    external_declaration       go to state 57
    preprocessor_directive     go to state 58
    function_definition        go to state 59
    declaration                go to state 60
    declaration_specifiers     go to state 61
    specifier                  go to state 62
    storage_class_specifier    go to state 63
    type_specifier             go to state 64
    type_qualifier             go to state 65
    struct_or_union_specifier  go to state 66
    enum_specifier             go to state 67
    statement                  go to state 68
    labeled_statement          go to state 69
    compound_statement         go to state 70
    expression_statement       go to state 71
    if_header                  go to state 72
    selection_statement        go to state 73
    do_header                  go to state 74
    iteration_statement        go to state 75
    jump_statement             go to state 76
    expression                 go to state 77
    assignment_expression      go to state 78
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    postfix_expression         go to state 92
    primary_expression         go to state 93


State 1

  124 expression_statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 94


State 2

  110 labeled_statement: IDENTIFIER • COLON statement
  221 primary_expression: IDENTIFIER •

    COLON  shift, and go to state 95

    $default  reduce using rule 221 (primary_expression)


State 3

   35 type_specifier: TYPE_NAME •
  222 primary_expression: TYPE_NAME •

    IDENTIFIER   reduce using rule 35 (type_specifier)
    TYPE_NAME    reduce using rule 35 (type_specifier)
    INT          reduce using rule 35 (type_specifier)
    CHAR_TOKEN   reduce using rule 35 (type_specifier)
    FLOAT_TOKEN  reduce using rule 35 (type_specifier)
    DOUBLE       reduce using rule 35 (type_specifier)
    LONG         reduce using rule 35 (type_specifier)
    SHORT        reduce using rule 35 (type_specifier)
    UNSIGNED     reduce using rule 35 (type_specifier)
    SIGNED       reduce using rule 35 (type_specifier)
    VOID         reduce using rule 35 (type_specifier)
    BOOL         reduce using rule 35 (type_specifier)
    STRUCT       reduce using rule 35 (type_specifier)
    ENUM         reduce using rule 35 (type_specifier)
    UNION        reduce using rule 35 (type_specifier)
    TYPEDEF      reduce using rule 35 (type_specifier)
    STATIC       reduce using rule 35 (type_specifier)
    EXTERN       reduce using rule 35 (type_specifier)
    AUTO         reduce using rule 35 (type_specifier)
    REGISTER     reduce using rule 35 (type_specifier)
    CONST        reduce using rule 35 (type_specifier)
    VOLATILE     reduce using rule 35 (type_specifier)
    MULTIPLY     reduce using rule 35 (type_specifier)
    MULTIPLY     [reduce using rule 222 (primary_expression)]
    BITWISE_AND  reduce using rule 35 (type_specifier)
    BITWISE_AND  [reduce using rule 222 (primary_expression)]
    LPAREN       reduce using rule 35 (type_specifier)
    LPAREN       [reduce using rule 222 (primary_expression)]
    RPAREN       reduce using rule 35 (type_specifier)
    RPAREN       [reduce using rule 222 (primary_expression)]
    LBRACKET     reduce using rule 35 (type_specifier)
    LBRACKET     [reduce using rule 222 (primary_expression)]
    SEMICOLON    reduce using rule 35 (type_specifier)
    SEMICOLON    [reduce using rule 222 (primary_expression)]
    $default     reduce using rule 222 (primary_expression)


State 4

  223 primary_expression: INTEGER_CONSTANT •

    $default  reduce using rule 223 (primary_expression)


State 5

  224 primary_expression: HEX_CONSTANT •

    $default  reduce using rule 224 (primary_expression)


State 6

  225 primary_expression: OCTAL_CONSTANT •

    $default  reduce using rule 225 (primary_expression)


State 7

  226 primary_expression: BINARY_CONSTANT •

    $default  reduce using rule 226 (primary_expression)


State 8

  227 primary_expression: FLOAT_CONSTANT •

    $default  reduce using rule 227 (primary_expression)


State 9

  229 primary_expression: STRING_LITERAL •

    $default  reduce using rule 229 (primary_expression)


State 10

  228 primary_expression: CHAR_CONSTANT •

    $default  reduce using rule 228 (primary_expression)


State 11

    8 preprocessor_directive: PREPROCESSOR •

    $default  reduce using rule 8 (preprocessor_directive)


State 12

  125 if_header: IF • LPAREN expression RPAREN

    LPAREN  shift, and go to state 96


State 13

  141 iteration_statement: WHILE • LPAREN marker_while_start expression RPAREN $@7 statement

    LPAREN  shift, and go to state 97


State 14

  144 iteration_statement: FOR • LPAREN expression_statement for_label_marker expression_statement $@8 for_increment_expression RPAREN statement
  147                    | FOR • LPAREN $@9 declaration for_label_marker expression_statement $@10 for_increment_expression RPAREN statement

    LPAREN  shift, and go to state 98


State 15

  135 do_header: DO •

    $default  reduce using rule 135 (do_header)


State 16

  134 selection_statement: SWITCH • LPAREN expression RPAREN $@6 statement

    LPAREN  shift, and go to state 99


State 17

  111 labeled_statement: CASE • constant_expression COLON statement

    IDENTIFIER        shift, and go to state 100
    TYPE_NAME         shift, and go to state 101
    INTEGER_CONSTANT  shift, and go to state 4
    HEX_CONSTANT      shift, and go to state 5
    OCTAL_CONSTANT    shift, and go to state 6
    BINARY_CONSTANT   shift, and go to state 7
    FLOAT_CONSTANT    shift, and go to state 8
    STRING_LITERAL    shift, and go to state 9
    CHAR_CONSTANT     shift, and go to state 10
    SIZEOF            shift, and go to state 43
    INCREMENT         shift, and go to state 44
    DECREMENT         shift, and go to state 45
    PLUS              shift, and go to state 46
    MINUS             shift, and go to state 47
    MULTIPLY          shift, and go to state 48
    BITWISE_AND       shift, and go to state 49
    BITWISE_NOT       shift, and go to state 50
    LOGICAL_NOT       shift, and go to state 51
    LPAREN            shift, and go to state 52

    conditional_expression     go to state 102
    constant_expression        go to state 103
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 104
    postfix_expression         go to state 92
    primary_expression         go to state 93


State 18

  112 labeled_statement: DEFAULT • COLON statement

    COLON  shift, and go to state 105


State 19

  150 jump_statement: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 106


State 20

  149 jump_statement: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 107


State 21

  151 jump_statement: RETURN • SEMICOLON
  152               | RETURN • expression SEMICOLON

    IDENTIFIER        shift, and go to state 100
    TYPE_NAME         shift, and go to state 101
    INTEGER_CONSTANT  shift, and go to state 4
    HEX_CONSTANT      shift, and go to state 5
    OCTAL_CONSTANT    shift, and go to state 6
    BINARY_CONSTANT   shift, and go to state 7
    FLOAT_CONSTANT    shift, and go to state 8
    STRING_LITERAL    shift, and go to state 9
    CHAR_CONSTANT     shift, and go to state 10
    SIZEOF            shift, and go to state 43
    INCREMENT         shift, and go to state 44
    DECREMENT         shift, and go to state 45
    PLUS              shift, and go to state 46
    MINUS             shift, and go to state 47
    MULTIPLY          shift, and go to state 48
    BITWISE_AND       shift, and go to state 49
    BITWISE_NOT       shift, and go to state 50
    LOGICAL_NOT       shift, and go to state 51
    LPAREN            shift, and go to state 52
    SEMICOLON         shift, and go to state 108

    expression                 go to state 109
    assignment_expression      go to state 78
    conditional_expression     go to state 79
    logical_or_expression      go to state 80
    logical_and_expression     go to state 81
    inclusive_or_expression    go to state 82
    exclusive_or_expression    go to state 83
    and_expression             go to state 84
    equality_expression        go to state 85
    relational_expression      go to state 86
    shift_expression           go to state 87
    additive_expression        go to state 88
    multiplicative_expression  go to state 89
    cast_expression            go to state 90
    unary_expression           go to state 91
    postfix_expression         go to state 92
    primary_expression         go to state 93


State 22

   26 type_specifier: INT •

    $default  reduce using rule 26 (type_specifier)


State 23

   24 type_specifier: CHAR_TOKEN •

    $default  reduce using rule 24 (type_specifier)


State 24

   28 type_specifier: FLOAT_TOKEN •

    $default  reduce using rule 28 (type_specifier)


State 25

   29 type_specifier: DOUBLE •

    $default  reduce using rule 29 (type_specifier)


State 26

   27 type_specifier: LONG •

    $default  reduce using rule 27 (type_specifier)


State 27

   25 type_specifier: SHORT •

    $default  reduce using rule 25 (type_specifier)


State 28

   31 type_specifier: UNSIGNED •

    $default  reduce using rule 31 (type_specifier)


State 29

   30 type_specifier: SIGNED •

    $default  reduce using rule 30 (type_specifier)


State 30

   23 type_specifier: VOID •

    $default  reduce using rule 23 (type_specifier)


State 31

   32 type_specifier: BOOL •

    $default  reduce using rule 32 (type_specifier)


State 32

   38 struct_or_union_specifier: STRUCT • IDENTIFIER
   39                          | STRUCT • LBRACE struct_declaration_list RBRACE
   40                          | STRUCT • IDENTIFIER LBRACE struct_declaration_list RBRACE

    IDENTIFIER  shift, and go to state 110
    LBRACE      shift, and go to state 111


State 33

   52 enum_specifier: ENUM • LBRACE enumerator_list RBRACE
   53               | ENUM • IDENTIFIER
   54               | ENUM • IDENTIFIER LBRACE enumerator_list RBRACE
